Fix toolbar overflow for browsers with visible scrollbars

--- a/assets/app/components/toolbar.sass
+++ b/assets/app/components/toolbar.sass
@@ -48,7 +48,6 @@
 
         @media (min-width: ($smartphone + 50))
             max-width: 100%
-            overflow: scroll
             width: $width
             @media (min-width: $tablet)
                 overflow: hidden
